Paginacao em GetPersonagens - porem com ma praticas (repositories e services)

--- a/OnePiece.Application/OnePiece.Application.csproj
+++ b/OnePiece.Application/OnePiece.Application.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\OnePiece.Domain\OnePiece.Domain.csproj" />
+    <ProjectReference Include="..\OnePiece.Infrastructure\OnePiece.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
